# provenance-rs

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml  rebuild_protos.yml  release.yml  security_audit.yml
proto-build/: Cargo.toml
proto-build/src/: main.rs
provenance-sdk-proto/: Cargo.toml  README.md
provenance-sdk-proto/src/: lib.rs
provenance-sdk-proto/src/prost/provenance-sdk/: PROVENANCE_SDK_COMMIT  provenance.attribute.v1.rs  provenance.exchange.v1.rs  provenance.marker.v1.rs  provenance.metadata.v1.p8e.rs  provenance.metadata.v1.rs  provenance.msgfees.v1.rs  provenance.name.v1.rs  provenance.reward.v1.rs  vault.module.v1.rs  vault.v1.rs
