[package]
name = "provenance-sdk-proto"
version = "0.1.1"
authors = ["Stephen Cirner <scirner@figure.com>"]
license = "Apache-2.0"
repository = "https://github.com/provenance-io/provenance-rs/tree/main"
description = "Protobuf stuct definitions for interacting with the Provenance Blockchain modules"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["blockchain", "cosmos", "proto", "provenance", "tendermint"]
edition = "2021"

[dependencies]
cosmos-sdk-proto = { version = "0.17", default-features = false }
prost = "0.11"
prost-types = "0.11"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
