[package]
name = "provenance-sdk-proto"
version = "0.2.0"
authors = ["Stephen Cirner <scirner@figure.com>"]
license = "Apache-2.0"
repository = "https://github.com/provenance-io/provenance-rs/tree/main"
description = "Protobuf stuct definitions for interacting with the Provenance Blockchain modules"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["blockchain", "cosmos", "proto", "provenance", "tendermint"]
edition = "2021"

[dependencies]
cosmos-sdk-proto = { version = "0.27", default-features = false }
ibc-proto = { version = "0.52", default-features = false }
prost = "0.13"
prost-types = "0.14"
# TODO this only needs to be included if grpc or grpc-transport are included
tonic = "0.13"

[features]
grpc = []
grpc-transport = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
